# Learning_at_ZJU_third_client

./: .gitignore  .ruff.toml  1.html  AGENTS.md  FAQ.md  LICENSE  README.md  opencode.json  pyproject.toml
.github/workflows/: lint.yml  release-bin.yml  release-deb.yml  release.yml
data/: api_list.json  backup.json  lazy_backup.json  log_backup.json  user_backup.json
docs/: CLI-JSON-Reference.md  DEPLOY.md  PACKAGING.md  reminder.md
src/: lazy_cli_main.py  lazy_gui_main.py
src/Learning_at_ZJU_third_client/: main.py  main_CLI.py  main_GUI.py
src/Learning_at_ZJU_third_client/CLI/: CLI.py  CLI_Typer.py  state.py
src/Learning_at_ZJU_third_client/CLI/command/: assignment.py  config.py  course.py  exam.py  log.py  resource.py  rollcall.py
src/Learning_at_ZJU_third_client/CLI/command/subcommand/: rollcall_config.py
src/Learning_at_ZJU_third_client/GUI/: GUI.py
src/Learning_at_ZJU_third_client/encrypt/: LoginRSA.py
src/Learning_at_ZJU_third_client/gui/: indexPage.py  userWelcomePage.py
src/Learning_at_ZJU_third_client/gui/QtExtention/: QFlowLayout.py
src/Learning_at_ZJU_third_client/load_config/: backup.py  gui_data_parser.py  load_config.py  parse_config.py  save_config.py
src/Learning_at_ZJU_third_client/login/: login.py
src/Learning_at_ZJU_third_client/printlog/: print_log.py
src/Learning_at_ZJU_third_client/search/: courses_search.py
src/Learning_at_ZJU_third_client/upload/: file_upload.py  submit.py
src/Learning_at_ZJU_third_client/zjuAPI/: courses_search.py  zju_api.py
src/lazy/: __main__.py  cli.py  gui.py
src/lazy/CLI/: CLI.py
src/lazy/CLI/command/: assignment.py  config.py  course.py  log.py  resource.py  rollcall.py
src/lazy/CLI/command/subcommand/: rollcall_config.py
src/lazy/CLI/config/: config.py
src/lazy/CLI/utils/: utils.py
src/lazy/GUI/: GUI.py
src/lazy/GUI/controllers/: MainController.py
src/lazy/GUI/views/: MainContent.py  MainWindow.py  Sidebar.py  Statusbar.py  TopBar.py
src/lazy/GUI/views/utils/: get_round_icon.py
src/lazy/core/load_config/: backup.py  load_config.py
src/lazy/load_config/: backup.py
src/lazy/login/: login.py
src/lazy/server/: app.py  auth.py  credentials.py  monitor.py  session_manager.py  state.py  task_loader.py
src/lazy/server/routers/: auth.py  data.py  health.py  tasks.py
src/lazy/zjuAPI/: zju_api.py
style/: userWelcomePage.qss
