# pyproject.toml

[project]
description = "学在浙大第三方客户端，提供 CLI 。"
name = "lazy-zju-client"
version = "0.1.0"
authors = [
    { name = "Yangshu233", email = "gm.yangshu233@gmail.com" },
]
# readme = "README.md"  # 如果你有README文件的话
requires-python = ">=3.10"
license = { text = "LGPLv3.0" }

dependencies = [
    "typer>=0.9.0",
    "requests>=2.30.0",
    "lxml>=5.0.0",
    "keyring>=24.0.0",
    "cryptography>=42.0.0",
    "asyncer==0.0.8",
    "httpx[socks]==0.28.1",
    "anyio==4.11.0",
    "aiofiles==24.1.0",
    "socksio==1.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7.0", "gradio>=5.49.1"]

# 开发时需要的工具 (用于格式化、检查、测试等)
dev = ["pyinstaller==6.16.0", "ruff==0.14.4"]

[project.scripts]
lazy = "lazy.cli:main"
lazy-gui = "lazy.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptoools.packages.find]
where = ["src"]
